@@ -990,6 +990,16 @@ be sent to the syslog file (such as /var/log/messages),
 except for the output of shell scripts and
 ifconfig commands,
 which will go to /dev/null unless otherwise redirected.
+
+When openvpn is run with the
+.B --daemon
+option, it will try to delay daemonization until the majority of initialization
+functions which are capable of generating fatal errors are complete.  This means
+that initialization scripts can test the return status of the
+openvpn command for a fairly reliable indication of whether the command
+has correctly initialized and entered the packet forwarding event loop.
+
+In OpenVPN, the vast majority of errors which occur after initialization are non-fatal.
 .TP
 .B --passtos
 Set the TOS field of the tunnel packet to what the payload's TOS is.
@@ -1114,11 +1124,13 @@ Normally, adaptive compression is enabled with
 .B --comp-lzo.
 
 Adaptive compression tries to optimize the case where you have
-compression enabled, but you are sending predominantly incompressible
-(or pre-compressed) packets over the tunnel.  With adaptive compression,
-OpenVPN will periodically sample the compression process to see if
-it's actually saving us anything.  If not, we will disable compression
-for a period of time, then re-sample.
+compression enabled, but you are sending predominantly uncompressible
+(or pre-compressed) packets over the tunnel, such as an FTP or rsync transfer
+of a large, compressed file.  With adaptive compression,
+OpenVPN will periodically sample the compression process to measure its
+efficiency.  If the data being sent over the tunnel is already compressed,
+the compression efficiency will be very low, triggering openvpn to disable
+compression for a period of time until the next re-sample test.
 .B 
 .SS Data Channel Encryption Options:
 These options are meaningful for both Static & TLS-negotiated key modes
