@@ -89,6 +89,9 @@ Upcoming version 1.4.0
   to /dev/null.
 * For inetd instantiations, dup socket descriptor
   to a >2 value.
+* Fixed bug in verify-cn script, where test would
+  incorrectly fail if CN=x was the last component
+  of the X509 composite string (Anonymous).
 
 2002.10.23 -- Version 1.3.2
 
